Adding Listing Capability Working

--- a/auctions/templates/auctions/newListing.html
+++ b/auctions/templates/auctions/newListing.html
@@ -23,7 +23,7 @@
           <div class="form-group">
                 <input autofocus class="form-control" type="text" name="item_image" placeholder="Image URL">
           </div>
-            <input class="btn btn-primary" type="submit" value="Login">
+            <input class="btn btn-primary" type="submit" value="Create Listing">
         </form>
         <a href="{% url 'auctions:index' %}">Back to Listings</a>
 {% endblock body %}
