--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -7,6 +7,9 @@
     <title>{% block title %}Auctions{% endblock %}</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <link href="{% static 'auctions/styles.css' %}" rel="stylesheet">
 </head>
 
@@ -23,12 +26,18 @@
         <li class="nav-item">
             <a class="nav-link" href="{% url 'auctions:index' %}">Active Listings</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'auctions:categories' %}">Categories</a>
+        </li>
         {% if user.is_authenticated %}
         <li class="nav-item">
-            <a class="nav-link" href="{% url 'auctions:logout' %}">Log Out</a>
+            <a class="nav-link" href="{% url 'auctions:logout' %}">Watchlist<span class="badge badge-secondary"></span></a>
         </li>
         <li class="nav-item">
             <a href="{% url 'auctions:create_listing' %}" class="nav-link">Create Listing</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'auctions:logout' %}">Log Out</a>
         </li>
         {% else %}
         <li class="nav-item">
