--- a/auctions/templates/auctions/register.html
+++ b/auctions/templates/auctions/register.html
@@ -5,7 +5,12 @@
 <h2>Register</h2>
 
 {% if message %}
-<div>{{ message }}</div>
+<div class="alert alert-warning alert-dismissible fade show" role="alert">
+    <strong>Error Creating New User</strong> {{message}}
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
 {% endif %}
 
 <form action="{% url 'auctions:register' %}" method="post">
