--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -31,7 +31,8 @@
         </li>
         {% if user.is_authenticated %}
         <li class="nav-item">
-            <a class="nav-link" href="{% url 'auctions:logout' %}">Watchlist<span class="badge badge-secondary"></span></a>
+            <a class="nav-link" href="{% url 'auctions:logout' %}">Watchlist {% if watched_count %}<span class="badge badge-secondary">{{watched_count}}</span>{% endif %}</a>
+                
         </li>
         <li class="nav-item">
             <a href="{% url 'auctions:create_listing' %}" class="nav-link">Create Listing</a>
