--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -3,18 +3,11 @@
 {% block body %}
   
   {% if message %}
-  <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-    <div class="toast-header">
-      <img src="..." class="rounded mr-2" alt="...">
-      <strong class="mr-auto">Message</strong>
-      <small>11 mins ago</small>
-      <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    <div class="toast-body">
-      {{message}}
-    </div>
+  <div class="alert alert-warning alert-dismissible fade show" role="alert">
+    {{message}} 
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
   </div>
   {% endif %}
   <div class="jumbotron">
@@ -55,8 +48,8 @@
     <form action="{% url 'auctions:listing' listing_id=listing.id %}" method="POST">
       {% csrf_token %}
       <div class="form-group">
-        <label for="exampleInputPassword1">Bid</label>
-        <input type="number" class="form-control" name="newBid">
+        <label for="bidAmount">Bid</label>
+        <input type="number" id="bidAmount" class="form-control" name="newBid">
       </div>
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
