--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -27,20 +27,23 @@
     <p class="h5">Listed by: {{listing.createdBy.username}}</p>
     <p class="h6">Auction Started On: {{listing.creationDate}}</p>
     <p class="font-weight-bold">Current Price: <span class="h4">{{listing.highestBid}}</span></p>
-    <p class="h5">Category: {{listing.category}}</p>
+    <p class="h5">Category: <a href="{% url 'auctions:category' category=listing.category %}">{{listing.category}}</a></p>
     
     {% if user.is_authenticated %}
+        {% if watched %}
+              <a class="btn btn-outline-primary" href="{% url 'auctions:remove_from_watchlist' listing_id=listing.id %}" 
+            role="button">Remove from Watchlist</a>
+        {% else %}
+                <a class="btn btn-outline-primary" href="{% url 'auctions:add_to_watchlist' listing_id=listing.id %}" 
+            role="button">Add to Watchlist</a>
+        {% endif %}
+        
       {% if listing.auctionOpen %}
+      
         {% if user.username == listing.createdBy.username %}
           <a class="btn btn-outline-primary" href="{% url 'auctions:close_auction' listing_id=listing.id %}" role="button">Close Auction</a>
         {% else %}
-          {% if watched %}
-              <a class="btn btn-outline-primary" href="{% url 'auctions:remove_from_watchlist' listing_id=listing.id %}" 
-            role="button">Remove from Watchlist</a>
-          {% else %}
-                <a class="btn btn-outline-primary" href="{% url 'auctions:add_to_watchlist' listing_id=listing.id %}" 
-            role="button">Add to Watchlist</a>
-          {% endif %}
+          
           <form action="{% url 'auctions:listing' listing_id=listing.id %}" method="POST">
             {% csrf_token %}
             <div class="form-group">
@@ -50,13 +53,12 @@
       {% if listing.auctionOpen %}
               <button type="submit" class="btn btn-primary">Submit</button>
         {% else %}
-  
-              <button type="submit" disabled class="btn btn-secondary">Auction Closed</button>
+        <a class="btn btn-info disabled">Auction Closed</a> 
   {% endif %}
           </form>
         {% endif %}
 	{% else %}
-        	<a class="btn btn-warning" disabled role="button">Auction Closed</a>
+        	<a class="btn btn-info disabled" >Auction Closed</a>
 	{% endif %}
       {% else %}
       <div class="alert alert-info" role="alert">
