--- a/auctions/templates/auctions/watchlist.html
+++ b/auctions/templates/auctions/watchlist.html
@@ -11,8 +11,15 @@
     <div class="card-body">
     <h5 class="card-title"><a href="{% url 'auctions:listing' listing_id=item.listing.id %}">{{item.listing.item_title}}</a></h5>
     <p class="card-text">{{item.listing.description}}</p>
-    <p class="card-text">${{item.listing.startingBid}}</p>
-    <p class="card-text"><small class="text-muted">bids go here</small></p>
+    <p class="card-text">${{item.listing.highestBid}}</p>
+      
+      {% if item.listing.auctionOpen %}
+        
+        <p class="card-text"><small class="text-muted">Auction Open</small></p>
+        {% else %}
+          <p class="card-text"><small class="text-muted">Auction Closed</small></p>
+
+      {% endif %}
     </div>
     </div>
   {% endfor %}
